# gantry_simulation

./: .env.example  .gitignore  .gitmodules
bash_scripts/container/: bashrc_extensions.sh  entry.sh
docker/: Dockerfile  docker-compose.yml  docker_start.sh
ros_ws_src/gantry_simulation/: CMakeLists.txt  package.xml
ros_ws_src/gantry_simulation/config/: nodes.yaml  waypoints.yaml  waypoints_satellite.rviz
ros_ws_src/gantry_simulation/launch/: gantry_map.gps  gantry_map.launch  gantry_map.rviz  gantry_map_alternatives.rviz  gantry_map_satellite.rviz  gantry_satellite.launch  waypoints_with_satellite.launch
ros_ws_src/gantry_simulation/src/: simple_waypoint_viz.py
ros_ws_src/satellite_map/: CMakeLists.txt  package.xml
ros_ws_src/satellite_map/config/: mapbox_config.yaml
ros_ws_src/satellite_map/launch/: gps_satellite_streaming.launch  mapbox_satellite.launch
ros_ws_src/satellite_map/rviz/: mapbox_satellite.rviz
ros_ws_src/satellite_map/scripts/: satellite_tile_downloader.py
ros_ws_src/test_package/: CMakeLists.txt  package.xml
ros_ws_src/test_package/scripts/: listener.py
ros_ws_src/test_pkg/: CMakeLists.txt  package.xml
