<?xml version="1.0"?>
<package format="2">
  <name>satellite_map</name>
  <version>1.0.0</version>
  <description>Satellite map integration for ROS RViz using Mapbox tiles</description>

  <maintainer email="28587497@students.lincoln.ac.uk">Gantry Simulation</maintainer>
  <license>MIT</license>
  <author email="28587497@students.lincoln.ac.uk">Gantry Simulation</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rviz_satellite</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>rviz_satellite</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rviz_satellite</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rviz</exec_depend>

  <test_depend>rostest</test_depend>

  <export>
    <architecture_independent/>
  </export>

</package>
